--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,6 @@
             </ul>
           </div>
           <div> Copyright © 2020 All rights reserved - <span class="website-name-preview-helper">Raine Pretorius's CV</span> </div>
-          <div class="clearfix upgrade-website-preview-helper">Powered By <a rel="nofollow" target="_blank" href="https://www.site123.com/">SITE123</a> - <a rel="nofollow" target="_blank" href="https://www.site123.com/">Website builder</a></div>
         </div>
       </footer>
     </div>
@@ -1454,7 +1453,7 @@
       "error_body": "Oops something went wrong",
       "limitTickets": "Limit of:",
       "tickets": "Tickets",
-      "registrationClosed": "Registration is closed. Please contact us for more information.",
+      "registrationClosed": "Registration is closed. Please Contact Me for more information.",
       "Sunday": "Sunday",
       "Monday": "Monday",
       "Tuesday": "Tuesday",
@@ -1465,7 +1464,7 @@
       "foodDeliverybootBoxTitle": "Order Window",
       "addToCart": "Add To Cart",
       "save": "Save",
-      "ThankYouAfterSubmmit": "Thank you for contacting us. We have received your message and will respond to you soon.",
+      "ThankYouAfterSubmmit": "Thank you for contacting me. We have received your message and will respond to you soon.",
       "country": "Country",
       "productQuntityLimit": "The product is limited to a maximum of {{units_limitation}} units.",
       "productQuntityLimitMin": "The product is limited to a minimum of {{units_limitation}} units.",
@@ -1525,9 +1524,9 @@
         "fullName": "Full Name",
         "description": "Description",
         "subject": "Subject",
-        "contactUs": "Contact Us",
+        "contactUs": "Contact Me",
         "infoBox": "Fill out the form or send a direct email to: {{email_address}}",
-        "thankYouMessage": "Thank you for contacting us.",
+        "thankYouMessage": "Thank you for contacting me.",
         "thankYouCloseBtn": "Close"
       },
       "editStructure": "Edit Structure",
@@ -1536,8 +1535,8 @@
       "magicBtn": {
         "contactUs": {
           "title": "Contact",
-          "submitBtn": "Contact Us",
-          "ThankYouAfterSubmmit": "Thank you for contacting us. We have received your message and will respond to you soon.",
+          "submitBtn": "Contact Me",
+          "ThankYouAfterSubmmit": "Thank you for contacting me. We have received your message and will respond to you soon.",
           "fields": {
             "name": "Name",
             "phone": "Phone",
@@ -1599,9 +1598,9 @@
         "fullName": "Full Name",
         "description": "Description",
         "subject": "Subject",
-        "title": "Contact Us",
+        "title": "Contact Me",
         "infoBox": "Please fill out the following form if you are interested in this product:",
-        "thankYouMessage": "Thank you for contacting us.",
+        "thankYouMessage": "Thank you for contacting me.",
         "thankYouCloseBtn": "Close",
         "phone": "Phone",
         "productName": "Product Name:"
