--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
   <!-- Mobile Browser Address Bar Color -->
   <meta name="theme-color" content="#307672"> <!-- Regular Meta Info -->
   <title class="s123-js-pjax">Raine Pretorius's CV</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172413993-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-172413993-1');
+</script>
+
   <meta name="description" content="Raine Pretorius&#39;s CV - I Am Raine" class="s123-js-pjax">
   <meta name="keywords" content="Raine Pretorius CV" class="s123-js-pjax">
-  <link rel="canonical" href="https://raine.pretoriusse.net/" class="s123-js-pjax"> <!-- Global site tag (gtag.js) - Google Analytics -->
   <script type="text/javascript" async="" src="https://raine.pretoriusse.net/index_files/analytics.js.download"></script>
   <script async="" src="https://raine.pretoriusse.net/index_files/js"></script>
   <script>
