--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@
           <div class="social-details-container social-icons">
             <ul class="list-inline">
               <li><a href="https://www.instagram.com/rainepretorius/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/raine-pretorius-96a3981b6/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/raine-pretorius-96a3981b6/" target="_blank"><i class="fa fa-linkedin fa-2x"></i><img src="https://static.s123-cdn-static.com/ready_uploads/svg/linkedin.svg?v=2&#39></img></a></li>
             </ul>
           </div>
           <div class="hidden-xs">
