--- a/products/index.html
+++ b/products/index.html
@@ -21,10 +21,10 @@
   <link rel="apple-touch-icon" sizes="167x167" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=167&height=167&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081">
   <!-- Mobile Browser Address Bar Color -->
   <meta name="theme-color" content="#307672"> <!-- Regular Meta Info -->
-  <title class="s123-js-pjax">Python - Raine Pretorius's CV</title>
-  <meta name="description" content="I am able to write Python Scripts to automate most tasks." class="s123-js-pjax">
-  <meta name="keywords" content="" class="s123-js-pjax">
-  <link rel="canonical" href="https://5f22aba10035f.site123.me/my-skills/python" class="s123-js-pjax" /> <!-- Global site tag (gtag.js) - Google Analytics -->
+  <title class="s123-js-pjax">Products - Raine Pretorius's CV</title>
+  <meta name="description" content="Products - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta name="keywords" content="Raine Pretorius CV" class="s123-js-pjax">
+  <link rel="canonical" href="https://5f22aba10035f.site123.me/products" class="s123-js-pjax" /> <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171296505-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -517,20 +517,20 @@
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
   </style> <!-- Facebook Meta Info -->
-  <meta property="og:url" content="https://5f22aba10035f.site123.me/my-skills/python" class="s123-js-pjax">
-  <meta property="og:image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f22aefdee903.jpg" class="s123-js-pjax">
-  <meta property="og:description" content="I am able to write Python Scripts to automate most tasks." class="s123-js-pjax">
-  <meta property="og:title" content="Python - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta property="og:url" content="https://5f22aba10035f.site123.me/products" class="s123-js-pjax">
+  <meta property="og:image" content="https://static.s123-cdn-static.com/ready_uploads/media/179697/800_5ceb938399a65.jpg" class="s123-js-pjax">
+  <meta property="og:description" content="Products - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta property="og:title" content="Products - Raine Pretorius's CV" class="s123-js-pjax">
   <meta property="og:site_name" content="Raine Pretorius's CV" class="s123-js-pjax">
   <meta property="og:see_also" content="https://5f22aba10035f.site123.me" class="s123-js-pjax"> <!-- Google+ Meta Info -->
-  <meta itemprop="name" content="Python - Raine Pretorius's CV" class="s123-js-pjax">
-  <meta itemprop="description" content="I am able to write Python Scripts to automate most tasks." class="s123-js-pjax">
-  <meta itemprop="image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f22aefdee903.jpg" class="s123-js-pjax"> <!-- Twitter Meta Info -->
+  <meta itemprop="name" content="Products - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta itemprop="description" content="Products - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta itemprop="image" content="https://static.s123-cdn-static.com/ready_uploads/media/179697/800_5ceb938399a65.jpg" class="s123-js-pjax"> <!-- Twitter Meta Info -->
   <meta name="twitter:card" content="summary" class="s123-js-pjax">
-  <meta name="twitter:url" content="https://5f22aba10035f.site123.me/my-skills/python" class="s123-js-pjax">
-  <meta name="twitter:title" content="Python - Raine Pretorius's CV" class="s123-js-pjax">
-  <meta name="twitter:description" content="I am able to write Python Scripts to automate most tasks." class="s123-js-pjax">
-  <meta name="twitter:image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f22aefdee903.jpg" class="s123-js-pjax">
+  <meta name="twitter:url" content="https://5f22aba10035f.site123.me/products" class="s123-js-pjax">
+  <meta name="twitter:title" content="Products - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta name="twitter:description" content="Products - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta name="twitter:image" content="https://static.s123-cdn-static.com/ready_uploads/media/179697/800_5ceb938399a65.jpg" class="s123-js-pjax">
   <!-- Website CSS variables -->
   <style>
     :root {
@@ -1406,7 +1406,6 @@
       }
     }
   </style>
-  <link class="website-front-data-css" rel="stylesheet" href="https://cdn-cms-s.f-static.net/versions/2/css/minimize-data.css?v=r7121" type="text/css" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn-cms-s.f-static.net/versions/2/css/websiteCSS.css?w=&orderScreen=&websiteID=3996662&onlyContent=&tranW=&v=r7121_20974081" class="reloadable-css" type="text/css"> <!-- Froala Editor CSS -->
   <!-- Google AdSense -->
 </head>
@@ -1421,10 +1420,10 @@
             <ul class="navPages nav navbar-nav">
               <li class="moduleMenu"><a class="page-unique homepageMenu s123-fast-page-load" href="/"><span class="txt-container">Home</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d06d1"><a class="page-unique s123-fast-page-load" href="/about-me"><span class="txt-container">About me</span></a></li>
-              <li class="moduleMenu active" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
+              <li class="moduleMenu" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5b3213745ea10"><a class="page-unique s123-fast-page-load" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5f22d12ee441e"><a class="page-unique s123-fast-page-load" href="/hobbies"><span class="txt-container">Hobbies</span></a></li>
-              <li class="moduleMenu" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique s123-fast-page-load" href="/products"><span class="txt-container">Products</span></a></li>
+              <li class="moduleMenu active" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique s123-fast-page-load" href="/products"><span class="txt-container">Products</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d83fa"><a class="page-unique s123-fast-page-load" href="/contact"><span class="txt-container">Contact</span></a></li>
             </ul>
             <ul class="navActions nav navbar-nav">
@@ -1475,43 +1474,39 @@
       <ul>
         <li class="moduleMenu"><a class="page-unique homepageMenu" href="/"><span class="txt-container">Home</span></a></li>
         <li class="moduleMenu" data-menu-module-id="56f3eb72d06d1"><a class="page-unique" href="/about-me"><span class="txt-container">About me</span></a></li>
-        <li class="moduleMenu active" data-menu-module-id="5701279e11070"><a class="page-unique" href="/my-skills"><span class="txt-container">My skills</span></a></li>
+        <li class="moduleMenu" data-menu-module-id="5701279e11070"><a class="page-unique" href="/my-skills"><span class="txt-container">My skills</span></a></li>
         <li class="moduleMenu" data-menu-module-id="5b3213745ea10"><a class="page-unique" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
         <li class="moduleMenu" data-menu-module-id="5f22d12ee441e"><a class="page-unique" href="/hobbies"><span class="txt-container">Hobbies</span></a></li>
-        <li class="moduleMenu" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique" href="/products"><span class="txt-container">Products</span></a></li>
+        <li class="moduleMenu active" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique" href="/products"><span class="txt-container">Products</span></a></li>
         <li class="moduleMenu" data-menu-module-id="56f3eb72d83fa"><a class="page-unique" href="/contact"><span class="txt-container">Contact</span></a></li>
       </ul>
     </div>
     <div id="s123PjaxMainContainer">
-      <div class="s123-content-area s123-page-container">
-        <section id="section-5701279e11070" class="s123-page-data s123-module s123-page-data-services bg-primary">
-          <div class="breadcrumb-wrap">
-            <ol class="breadcrumb container">
-              <li><a class="homepageMenu s123-fast-page-load" href="/"><span class="txt-container">Home</span></a></li>
-              <li><a data-module-id="5701279e11070" href="/my-skills">My skills</a></li>
-              <li class="active">Python</li>
-            </ol>
-          </div>
+      <div id="s123ModulesContainer" class="s123-content-area s123-modules-container">
+        <section id="section-5f65e3fe23c9e" class="s123-module s123-module-about layout-1 bg-primary">
           <div class="container-fluid page_header_style page_header_style_">
-            <div class="container">
-              <div class="row modulesTitle">
-                <div class="col-xs-12 text-center">
-                  <H1 id="section-5701279e11070-title">Python</H1>
-                  <hr class="small">
+            <div class="breadcrumb-wrap">
+              <ol class="breadcrumb container">
+                <li><a class="homepageMenu" href="/"><span class="txt-container">Home</span></a></li>
+                <li data-module-id="5f65e3fe23c9e" class="active">Products</li>
+              </ol>
+            </div>
+            <div class="row">
+              <div class="container">
+                <div class="row modulesTitle">
+                  <div class="col-xs-12 text-center">
+                    <H1 id="section-5f65e3fe23c9e-title" class="s123-page-header">Products</H1>
+                    <hr class="small">
+                    <h4 id="section-5f65e3fe23c9e-slogan" class="s123-page-slogan"></h4>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="container">
-            <div class="row">
-              <div class="col-lg-2 col-md-2 col-sm-2"><img src="https://static.s123-cdn-static.com/uploads/3996662/800_5f22aefdee903.jpg" class="img-responsive" alt="Python" /></div>
-              <div class="col-lg-10 col-md-10 col-sm-10">
-                <div class="responsive-handler fr-view breakable">
-                  <div>
-                    <p>I am able to write Python Scripts to automate most tasks. Here is my <a href="https://cdn1.pretoriusse.net/CDN/Udemy_Certificates/Python/Python%20Udemy%20Certificate.jpg" rel="noopener noreferrer" target="_blank">Udemy
-                        Certificate</a>.</p>
-                  </div>
-                </div>
+            <div class="row text-center">
+              <div class='col-xs-12 '>
+                <div class="responsive-handler fr-view breakable">Placeholder</div>
               </div>
             </div>
           </div>
@@ -1533,10 +1528,10 @@
             <ul class="navPages nav navbar-nav">
               <li class="moduleMenu"><a class="page-unique homepageMenu s123-fast-page-load" href="/"><span class="txt-container">Home</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d06d1"><a class="page-unique s123-fast-page-load" href="/about-me"><span class="txt-container">About me</span></a></li>
-              <li class="moduleMenu active" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
+              <li class="moduleMenu" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5b3213745ea10"><a class="page-unique s123-fast-page-load" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5f22d12ee441e"><a class="page-unique s123-fast-page-load" href="/hobbies"><span class="txt-container">Hobbies</span></a></li>
-              <li class="moduleMenu" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique s123-fast-page-load" href="/products"><span class="txt-container">Products</span></a></li>
+              <li class="moduleMenu active" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique s123-fast-page-load" href="/products"><span class="txt-container">Products</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d83fa"><a class="page-unique s123-fast-page-load" href="/contact"><span class="txt-container">Contact</span></a></li>
             </ul>
           </div>
@@ -1586,8 +1581,8 @@
       style=" mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/angle-up.svg?v=2'); -webkit-mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/angle-up.svg?v=2');" data-ie11-classes="">&nbsp;</i></a> <input type="hidden"
     id="layoutNUM" name="layoutNUM" value="1"> <input type="hidden" id="footer_layout" name="footer_layout" value="2"> <input type="hidden" id="layoutMenuPositionTXT" name="layoutMenuPositionTXT" value="top"> <input type="hidden" id="versionNUM"
     name="versionNUM" value="2"> <input type="hidden" id="w" name="w" value=""> <input type="hidden" id="websiteID" value="3996662"> <input type="hidden" id="enable_as_theme" value="0"> <input type="hidden" id="onepage" value="1"> <input
-    type="hidden" id="pjaxSupported" value="0"> <input type="hidden" id="moduleTypeNUM" class="s123-js-pjax" name="moduleTypeNUM" value="3"> <input type="hidden" id="hasEcommerce" value="0"> <input type="hidden" id="pageUniqueID" class="s123-js-pjax"
-    name="pageUniqueID" value="item-5f22af01cdf6b">
+    type="hidden" id="pjaxSupported" value="1"> <input type="hidden" id="moduleTypeNUM" class="s123-js-pjax" name="moduleTypeNUM" value="16"> <input type="hidden" id="hasEcommerce" value="0"> <input type="hidden" id="pageUniqueID"
+    class="s123-js-pjax" name="pageUniqueID" value="module-5f65e3fe23c9e">
   <script>
     var menuScrollOffset = 60;
     var packageNUM = 1;
@@ -1848,15 +1843,14 @@
   <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p3.js?v=r7121" crossorigin="anonymous"></script>
   <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_p4.js?v=r7121" crossorigin="anonymous"></script>
   <script src="https://cdn-cms-s.f-static.net/versions/2/js/js.php?v=r7121&umk=3" crossorigin="anonymous"></script>
-  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_scripts.js?v=r7121" crossorigin="anonymous"></script>
-  <script class="website-front-data-js" src="https://cdn-cms-s.f-static.net/versions/2/js/minimize-data.js?v=r7121" crossorigin="anonymous"></script> <!-- Website Statistics -->
+  <script src="https://cdn-cms-s.f-static.net/versions/2/js/minimize_scripts.js?v=r7121" crossorigin="anonymous"></script> <!-- Website Statistics -->
   <script src="https://cdn-cms-s.f-static.net/versions/2/wizard/statistics/js/generateStats-min.js?v=r7121" crossorigin="anonymous"></script> <!-- Floating Magic Button Update Preview Helper -->
   <div>
     <div class="magic-button-container">
       <!-- Contact Magic Button Settings--> <input type="hidden" id="magicButtonSettings"
         value="{&quot;active&quot;:true,&quot;style&quot;:&quot;mainColor&quot;,&quot;items&quot;:{&quot;contactUs&quot;:{&quot;order&quot;:0,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;raine.pretorius1@gmail.com&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;hasInput&quot;:true}},&quot;greeter&quot;:{&quot;active&quot;:false,&quot;value&quot;:&quot;&quot;},&quot;siteLogo&quot;:&quot;&quot;,&quot;siteName&quot;:&quot;Raine Pretorius's CV&quot;}">
       <!-- Share Magic Button Settings --> <input type="hidden" id="shareMagicButtonSettings"
-        value="{&quot;active&quot;:true,&quot;style&quot;:&quot;mainColor&quot;,&quot;items&quot;:{&quot;faceBook&quot;:{&quot;order&quot;:1,&quot;icon&quot;quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;hasInput&quot;:false},&quot;gmail&quot;:{&quot;order&quot;:13,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false},&quot;whatsApp&quot;:{&quot;order&quot;:12,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false}},&quot;greeter&quot;:{&quot;active&quot;:false,&quot;value&quot;:&quot;&quot;},&quot;siteLogo&quot;:&quot;&quot;,&quot;siteName&quot;:&quot;Raine Pretorius's CV&quot;}">
+        value="{&quot;active&quot;:true,&quot;style&quot;:&quot;mainColor&quot;,&quot;items&quot;:{&quot;faceBook&quot;:{&quot;order&quot;:1,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;hasInput&quot;:false},&quot;gmail&quot;:{&quot;order&quot;:13,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false},&quot;whatsApp&quot;:{&quot;order&quot;:12,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false}},&quot;greeter&quot;:{&quot;active&quot;:false,&quot;value&quot;:&quot;&quot;},&quot;siteLogo&quot;:&quot;&quoquot;,&quot;siteName&quot;:&quot;Raine Pretorius's CV&quot;}">
       <!-- All Magic Buttons -->
       <div class="all-magic-buttons"></div>
     </div>
