Supposed to work after fixing missing content.

--- a/education-experience-1/microsoft-excel-data-visualization-excel-charts-graphs/index.html
+++ b/education-experience-1/microsoft-excel-data-visualization-excel-charts-graphs/index.html
@@ -14,7 +14,7 @@
   <link rel="dns-prefetch preconnect" href="https://static.s123-cdn.com" crossorigin="anonymous" /> <!-- Favicon -->
   <link rel="shortcut icon" href="https://cdn1.pretoriusse.net/CDN/Images/raine.jpg" type="image/x-icon">
   <link rel="icon" href="https://cdn1.pretoriusse.net/CDN/Images/raine.jpg" type="image/x-icon">
-  <link rel="manifest" href="https://cdn-cms-s.f-static.net/versions/2/css/manifest.json?w=&orderScreen=&websiteID=3996662&onlyContent=&tranW=&v=r7121_20974081&wd=5f22aba10035f.site123.me"><!-- Status Bar -->
+  <link rel="manifest" href="https://cdn-cms-s.f-static.net/versions/2/css/manifest.json?w=&orderScreen=&websiteID=3996662&onlyContent=&tranW=&v=r7121_20974081&wd=raine.pretoriusse.net"><!-- Status Bar -->
   <meta name="apple-mobile-web-app-status-bar-style" content="default"><!-- 152px icon -->
   <link rel="apple-touch-icon" sizes="152x152" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=152&height=152&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081"><!-- 180px icon -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=180&height=180&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081"><!-- 167px icon -->
@@ -24,18 +24,19 @@
   <title class="s123-js-pjax">Microsoft Excel - Data Visualization, Excel Charts &amp; Graphs - Raine Pretorius's CV</title>
   <meta name="description" content="Completed Udemy - Microsoft Excel - Data Visualization, Excel Charts &amp; Graphs." class="s123-js-pjax">
   <meta name="keywords" content="" class="s123-js-pjax">
-  <link rel="canonical" href="https://raine.pretoriusse.net/education-experience-1/microsoft-excel-data-visualization-excel-charts-graphs" class="s123-js-pjax" /> <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171296505-1"></script>
+  <link rel="canonical" href="https://raine.pretoriusse.net/education-experience-1/microsoft-excel-data-visualization-excel-charts-graphs" class="s123-js-pjax" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172413993-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-171296505-1');
+    gtag('config', 'UA-172413993-1');
   </script>
+  <!-- End Global site tag (gtag.js) - Google Analytics -->
+
   <style>
     /* cyrillic-ext */
     @font-face {
@@ -1591,7 +1592,7 @@
   <script>
     var menuScrollOffset = 60;
     var packageNUM = 1;
-    var domain = '5f22aba10035f.site123.me';
+    var domain = 'raine.pretoriusse.net';
     var languageCode = 'en';
     var multiLanCode = '';
     var globalLanguageChildLan = '';
