--- a/hobbies/mountain-biking/index.html
+++ b/hobbies/mountain-biking/index.html
@@ -14,7 +14,7 @@
   <link rel="dns-prefetch preconnect" href="https://static.s123-cdn.com" crossorigin="anonymous" /> <!-- Favicon -->
   <link rel="shortcut icon" href="https://cdn1.pretoriusse.net/CDN/Images/raine.jpg" type="image/x-icon">
   <link rel="icon" href="https://cdn1.pretoriusse.net/CDN/Images/raine.jpg" type="image/x-icon">
-  <link rel="manifest" href="https://cdn-cms-s.f-static.net/versions/2/css/manifest.json?w=&orderScreen=&websiteID=3996662&onlyContent=&tranW=&v=r7121_20974081&wd=5f22aba10035f.site123.me"><!-- Status Bar -->
+  <link rel="manifest" href="https://cdn-cms-s.f-static.net/versions/2/css/manifest.json?w=&orderScreen=&websiteID=3996662&onlyContent=&tranW=&v=r7121_20974081&wd=raine.pretoriusse.net"><!-- Status Bar -->
   <meta name="apple-mobile-web-app-status-bar-style" content="default"><!-- 152px icon -->
   <link rel="apple-touch-icon" sizes="152x152" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=152&height=152&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081"><!-- 180px icon -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=180&height=180&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081"><!-- 167px icon -->
@@ -24,18 +24,20 @@
   <title class="s123-js-pjax">Mountain Biking - Raine Pretorius's CV</title>
   <meta name="description" content="I am a Cyclist and Mountain Biker." class="s123-js-pjax">
   <meta name="keywords" content="" class="s123-js-pjax">
-  <link rel="canonical" href="https://5f22aba10035f.site123.me/hobbies/mountain-biking" class="s123-js-pjax" /> <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171296505-1"></script>
+  <link rel="canonical" href="https://raine.pretoriusse.net/hobbies/mountain-biking" class="s123-js-pjax" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172413993-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-171296505-1');
+    gtag('config', 'UA-172413993-1');
   </script>
+  <!-- End Global site tag (gtag.js) - Google Analytics -->
+
+
   <style>
     /* cyrillic-ext */
     @font-face {
@@ -517,17 +519,17 @@
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
   </style> <!-- Facebook Meta Info -->
-  <meta property="og:url" content="https://5f22aba10035f.site123.me/hobbies/mountain-biking" class="s123-js-pjax">
+  <meta property="og:url" content="https://raine.pretoriusse.net/hobbies/mountain-biking" class="s123-js-pjax">
   <meta property="og:image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f22d1df9cea0.jpg" class="s123-js-pjax">
   <meta property="og:description" content="I am a Cyclist and Mountain Biker." class="s123-js-pjax">
   <meta property="og:title" content="Mountain Biking - Raine Pretorius's CV" class="s123-js-pjax">
   <meta property="og:site_name" content="Raine Pretorius's CV" class="s123-js-pjax">
-  <meta property="og:see_also" content="https://5f22aba10035f.site123.me" class="s123-js-pjax"> <!-- Google+ Meta Info -->
+  <meta property="og:see_also" content="https://raine.pretoriusse.net" class="s123-js-pjax"> <!-- Google+ Meta Info -->
   <meta itemprop="name" content="Mountain Biking - Raine Pretorius's CV" class="s123-js-pjax">
   <meta itemprop="description" content="I am a Cyclist and Mountain Biker." class="s123-js-pjax">
   <meta itemprop="image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f22d1df9cea0.jpg" class="s123-js-pjax"> <!-- Twitter Meta Info -->
   <meta name="twitter:card" content="summary" class="s123-js-pjax">
-  <meta name="twitter:url" content="https://5f22aba10035f.site123.me/hobbies/mountain-biking" class="s123-js-pjax">
+  <meta name="twitter:url" content="https://raine.pretoriusse.net/hobbies/mountain-biking" class="s123-js-pjax">
   <meta name="twitter:title" content="Mountain Biking - Raine Pretorius's CV" class="s123-js-pjax">
   <meta name="twitter:description" content="I am a Cyclist and Mountain Biker." class="s123-js-pjax">
   <meta name="twitter:image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f22d1df9cea0.jpg" class="s123-js-pjax">
@@ -1590,7 +1592,7 @@
   <script>
     var menuScrollOffset = 60;
     var packageNUM = 1;
-    var domain = '5f22aba10035f.site123.me';
+    var domain = 'raine.pretoriusse.net';
     var languageCode = 'en';
     var multiLanCode = '';
     var globalLanguageChildLan = '';
