--- a/my-skills/the-complete-java-certification-course/index.html
+++ b/my-skills/the-complete-java-certification-course/index.html
@@ -21,10 +21,10 @@
   <link rel="apple-touch-icon" sizes="167x167" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=167&height=167&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081">
   <!-- Mobile Browser Address Bar Color -->
   <meta name="theme-color" content="#307672"> <!-- Regular Meta Info -->
-  <title class="s123-js-pjax">Complete Python Bootcamp - Raine Pretorius's CV</title>
-  <meta name="description" content="Completed Udemy - The Complete Python Bootcamp." class="s123-js-pjax">
+  <title class="s123-js-pjax">Java - Raine Pretorius's CV</title>
+  <meta name="description" content="I can write Java programs." class="s123-js-pjax">
   <meta name="keywords" content="" class="s123-js-pjax">
-  <link rel="canonical" href="https://raine.pretoriusse.net/education-experience-1/complete-python-bootcamp" class="s123-js-pjax" />
+  <link rel="canonical" href="https://raine.pretoriusse.net/my-skills/java" class="s123-js-pjax" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172413993-1"></script>
@@ -518,20 +518,20 @@
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
   </style> <!-- Facebook Meta Info -->
-  <meta property="og:url" content="https://raine.pretoriusse.net/education-experience-1/complete-python-bootcamp" class="s123-js-pjax">
-  <meta property="og:image" content="https://static.s123-cdn-static.com/ready_uploads/media/179697/800_5ceb938399a65.jpg" class="s123-js-pjax">
-  <meta property="og:description" content="Completed Udemy - The Complete Python Bootcamp." class="s123-js-pjax">
-  <meta property="og:title" content="Complete Python Bootcamp - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta property="og:url" content="https://raine.pretoriusse.net/my-skills/java" class="s123-js-pjax">
+  <meta property="og:image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f65e825ab91d.jpg" class="s123-js-pjax">
+  <meta property="og:description" content="I can write Java programs." class="s123-js-pjax">
+  <meta property="og:title" content="Java - Raine Pretorius's CV" class="s123-js-pjax">
   <meta property="og:site_name" content="Raine Pretorius's CV" class="s123-js-pjax">
   <meta property="og:see_also" content="https://raine.pretoriusse.net" class="s123-js-pjax"> <!-- Google+ Meta Info -->
-  <meta itemprop="name" content="Complete Python Bootcamp - Raine Pretorius's CV" class="s123-js-pjax">
-  <meta itemprop="description" content="Completed Udemy - The Complete Python Bootcamp." class="s123-js-pjax">
-  <meta itemprop="image" content="https://static.s123-cdn-static.com/ready_uploads/media/179697/800_5ceb938399a65.jpg" class="s123-js-pjax"> <!-- Twitter Meta Info -->
+  <meta itemprop="name" content="Java - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta itemprop="description" content="I can write Java programs." class="s123-js-pjax">
+  <meta itemprop="image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f65e825ab91d.jpg" class="s123-js-pjax"> <!-- Twitter Meta Info -->
   <meta name="twitter:card" content="summary" class="s123-js-pjax">
-  <meta name="twitter:url" content="https://raine.pretoriusse.net/education-experience-1/complete-python-bootcamp" class="s123-js-pjax">
-  <meta name="twitter:title" content="Complete Python Bootcamp - Raine Pretorius's CV" class="s123-js-pjax">
-  <meta name="twitter:description" content="Completed Udemy - The Complete Python Bootcamp." class="s123-js-pjax">
-  <meta name="twitter:image" content="https://static.s123-cdn-static.com/ready_uploads/media/179697/800_5ceb938399a65.jpg" class="s123-js-pjax">
+  <meta name="twitter:url" content="https://raine.pretoriusse.net/my-skills/java" class="s123-js-pjax">
+  <meta name="twitter:title" content="Java - Raine Pretorius's CV" class="s123-js-pjax">
+  <meta name="twitter:description" content="I can write Java programs." class="s123-js-pjax">
+  <meta name="twitter:image" content="https://static.s123-cdn-static.com/uploads/3996662/800_5f65e825ab91d.jpg" class="s123-js-pjax">
   <!-- Website CSS variables -->
   <style>
     :root {
@@ -1422,8 +1422,8 @@
             <ul class="navPages nav navbar-nav">
               <li class="moduleMenu"><a class="page-unique homepageMenu s123-fast-page-load" href="/"><span class="txt-container">Home</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d06d1"><a class="page-unique s123-fast-page-load" href="/about-me"><span class="txt-container">About me</span></a></li>
-              <li class="moduleMenu" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
-              <li class="moduleMenu active" data-menu-module-id="5b3213745ea10"><a class="page-unique s123-fast-page-load" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
+              <li class="moduleMenu active" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
+              <li class="moduleMenu" data-menu-module-id="5b3213745ea10"><a class="page-unique s123-fast-page-load" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5f22d12ee441e"><a class="page-unique s123-fast-page-load" href="/hobbies"><span class="txt-container">Hobbies</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique s123-fast-page-load" href="/products"><span class="txt-container">Products</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d83fa"><a class="page-unique s123-fast-page-load" href="/contact"><span class="txt-container">Contact</span></a></li>
@@ -1476,8 +1476,8 @@
       <ul>
         <li class="moduleMenu"><a class="page-unique homepageMenu" href="/"><span class="txt-container">Home</span></a></li>
         <li class="moduleMenu" data-menu-module-id="56f3eb72d06d1"><a class="page-unique" href="/about-me"><span class="txt-container">About me</span></a></li>
-        <li class="moduleMenu" data-menu-module-id="5701279e11070"><a class="page-unique" href="/my-skills"><span class="txt-container">My skills</span></a></li>
-        <li class="moduleMenu active" data-menu-module-id="5b3213745ea10"><a class="page-unique" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
+        <li class="moduleMenu active" data-menu-module-id="5701279e11070"><a class="page-unique" href="/my-skills"><span class="txt-container">My skills</span></a></li>
+        <li class="moduleMenu" data-menu-module-id="5b3213745ea10"><a class="page-unique" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
         <li class="moduleMenu" data-menu-module-id="5f22d12ee441e"><a class="page-unique" href="/hobbies"><span class="txt-container">Hobbies</span></a></li>
         <li class="moduleMenu" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique" href="/products"><span class="txt-container">Products</span></a></li>
         <li class="moduleMenu" data-menu-module-id="56f3eb72d83fa"><a class="page-unique" href="/contact"><span class="txt-container">Contact</span></a></li>
@@ -1485,19 +1485,19 @@
     </div>
     <div id="s123PjaxMainContainer">
       <div class="s123-content-area s123-page-container">
-        <section id="section-5b3213745ea10" class="s123-page-data s123-module s123-page-data-timeline bg-primary">
+        <section id="section-5701279e11070" class="s123-page-data s123-module s123-page-data-services bg-primary">
           <div class="breadcrumb-wrap">
             <ol class="breadcrumb container">
               <li><a class="homepageMenu s123-fast-page-load" href="/"><span class="txt-container">Home</span></a></li>
-              <li><a data-module-id="5b3213745ea10" href="/education-experience-1">Education &amp; Experience</a></li>
-              <li class="active">Complete Python Bootcamp</li>
+              <li><a data-module-id="5701279e11070" href="/my-skills">My skills</a></li>
+              <li class="active">Java</li>
             </ol>
           </div>
           <div class="container-fluid page_header_style page_header_style_">
             <div class="container">
               <div class="row modulesTitle">
                 <div class="col-xs-12 text-center">
-                  <H1 id="section-5b3213745ea10-title">Complete Python Bootcamp</H1>
+                  <H1 id="section-5701279e11070-title">Java</H1>
                   <hr class="small">
                 </div>
               </div>
@@ -1505,12 +1505,13 @@
           </div>
           <div class="container">
             <div class="row">
+              <div class="col-lg-2 col-md-2 col-sm-2"><img src="https://static.s123-cdn-static.com/uploads/3996662/800_5f65e825ab91d.jpg" class="img-responsive" alt="Java" /></div>
               <div class="col-lg-10 col-md-10 col-sm-10">
                 <div class="responsive-handler fr-view breakable">
                   <div>
-                    <p>Completed <a href="https://www.udemy.com/course/complete-python-bootcamp/" rel="noopener noreferrer" target="_blank">Udemy - The Complete Python Bootcamp.</a></p>
+                    <p>I am able to write intermediate Java programs.</p>
                     <p><br></p>
-                    <p><a href="https://cdn1.pretoriusse.net/CDN/Udemy_Certificates/Python/Python%20Udemy%20Certificate.jpg" rel="noopener noreferrer" target="_blank">Certificate of Completion</a></p>
+                    <p><a href="https://pretoriuscdn.ams3.cdn.digitaloceanspaces.com/CDN/Udemy_Certificates/Java/The%20Complete%20Java%20Certification%20Course.jpg" rel="noopener noreferrer" target="_blank">Certificate of Completion</a></p>
                   </div>
                 </div>
               </div>
@@ -1534,8 +1535,8 @@
             <ul class="navPages nav navbar-nav">
               <li class="moduleMenu"><a class="page-unique homepageMenu s123-fast-page-load" href="/"><span class="txt-container">Home</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d06d1"><a class="page-unique s123-fast-page-load" href="/about-me"><span class="txt-container">About me</span></a></li>
-              <li class="moduleMenu" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
-              <li class="moduleMenu active" data-menu-module-id="5b3213745ea10"><a class="page-unique s123-fast-page-load" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
+              <li class="moduleMenu active" data-menu-module-id="5701279e11070"><a class="page-unique s123-fast-page-load" href="/my-skills"><span class="txt-container">My skills</span></a></li>
+              <li class="moduleMenu" data-menu-module-id="5b3213745ea10"><a class="page-unique s123-fast-page-load" href="/education-experience-1"><span class="txt-container">Education &amp; Experience</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5f22d12ee441e"><a class="page-unique s123-fast-page-load" href="/hobbies"><span class="txt-container">Hobbies</span></a></li>
               <li class="moduleMenu" data-menu-module-id="5f65e3fe23c9e"><a class="page-unique s123-fast-page-load" href="/products"><span class="txt-container">Products</span></a></li>
               <li class="moduleMenu" data-menu-module-id="56f3eb72d83fa"><a class="page-unique s123-fast-page-load" href="/contact"><span class="txt-container">Contact</span></a></li>
@@ -1587,8 +1588,8 @@
       style=" mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/angle-up.svg?v=2'); -webkit-mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/angle-up.svg?v=2');" data-ie11-classes="">&nbsp;</i></a> <input type="hidden"
     id="layoutNUM" name="layoutNUM" value="1"> <input type="hidden" id="footer_layout" name="footer_layout" value="2"> <input type="hidden" id="layoutMenuPositionTXT" name="layoutMenuPositionTXT" value="top"> <input type="hidden" id="versionNUM"
     name="versionNUM" value="2"> <input type="hidden" id="w" name="w" value=""> <input type="hidden" id="websiteID" value="3996662"> <input type="hidden" id="enable_as_theme" value="0"> <input type="hidden" id="onepage" value="1"> <input
-    type="hidden" id="pjaxSupported" value="0"> <input type="hidden" id="moduleTypeNUM" class="s123-js-pjax" name="moduleTypeNUM" value="41"> <input type="hidden" id="hasEcommerce" value="0"> <input type="hidden" id="pageUniqueID"
-    class="s123-js-pjax" name="pageUniqueID" value="item-5f22bd588a280">
+    type="hidden" id="pjaxSupported" value="0"> <input type="hidden" id="moduleTypeNUM" class="s123-js-pjax" name="moduleTypeNUM" value="3"> <input type="hidden" id="hasEcommerce" value="0"> <input type="hidden" id="pageUniqueID" class="s123-js-pjax"
+    name="pageUniqueID" value="item-5f65e829a604a">
   <script>
     var menuScrollOffset = 60;
     var packageNUM = 1;
@@ -1857,7 +1858,7 @@
       <!-- Contact Magic Button Settings--> <input type="hidden" id="magicButtonSettings"
         value="{&quot;active&quot;:true,&quot;style&quot;:&quot;mainColor&quot;,&quot;items&quot;:{&quot;contactUs&quot;:{&quot;order&quot;:0,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;raine.pretorius1@gmail.com&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;hasInput&quot;:true}},&quot;greeter&quot;:{&quot;active&quot;:false,&quot;value&quot;:&quot;&quot;},&quot;siteLogo&quot;:&quot;&quot;,&quot;siteName&quot;:&quot;Raine Pretorius's CV&quot;}">
       <!-- Share Magic Button Settings --> <input type="hidden" id="shareMagicButtonSettings"
-        value="{&quot;active&quot;:true,&quot;style&quot;:&quot;mainColor&quot;,&quot;items&quot;:{&quot;faceBook&quot;:{&quot;order&quot;:1,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;hasInput&quot;:false},&quot;gmail&quot;:{&quot;order&quot;:13,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false},&quot;whatsApp&quot;:{&quot;order&quot;:12,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false}},&quot;greeter&quot;:{&quot;active&quot;:false,&quot;value&quot;:&quot;&quot;},&quot;siteLogo&quot;:&quot;&quot;,&quot;siteName&quot;:&quot;Raine Pretorius's CV&quot;}">
+        value="{&quot;active&quot;:true,&quot;style&quot;:&quot;mainColor&quot;,&quot;items&quot;:{&quot;faceBook&quot;:{&quot;order&quot;:1,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&ququot;&quot;,&quot;hasInput&quot;:false},&quot;gmail&quot;:{&quot;order&quot;:13,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false},&quot;whatsApp&quot;:{&quot;order&quot;:12,&quot;icon&quot;:&quot;&quot;,&quot;active&quot;:&quot;&quot;,&quot;value&quot;:&quot;1&quot;,&quot;dialCode&quot;:&quot;&quot;,&quot;countryData&quot;:&quot;za&quot;,&quot;hasInput&quot;:false}},&quot;greeter&quot;:{&quot;active&quot;:false,&quot;value&quot;:&quot;&quot;},&quot;siteLogo&quot;:&quot;&quot;,&quot;siteName&quot;:&quot;Raine Pretorius's CV&quot;}">
       <!-- All Magic Buttons -->
       <div class="all-magic-buttons"></div>
     </div>
