Added Google Analytics

--- a/education-experience-1/the-complete-java-certification-course/index.html
+++ b/education-experience-1/the-complete-java-certification-course/index.html
@@ -24,18 +24,18 @@
   <title class="s123-js-pjax">The Complete Java Certification Course - Raine Pretorius's CV</title>
   <meta name="description" content="I can write basic Java programs." class="s123-js-pjax">
   <meta name="keywords" content="" class="s123-js-pjax">
-  <link rel="canonical" href="https://raine.pretoriusse.net/education-experience-1/the-complete-java-certification-course" class="s123-js-pjax" /> <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171296505-1"></script>
+  <link rel="canonical" href="https://raine.pretoriusse.net/education-experience-1/the-complete-java-certification-course" class="s123-js-pjax" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172413993-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-171296505-1');
+    gtag('config', 'UA-172413993-1');
   </script>
+  <!-- End Global site tag (gtag.js) - Google Analytics -->
   <style>
     /* cyrillic-ext */
     @font-face {
