--- a/my-skills/digico-certified-sound-engineer/index.html
+++ b/my-skills/digico-certified-sound-engineer/index.html
@@ -1509,7 +1509,7 @@
               <div class="col-lg-10 col-md-10 col-sm-10">
                 <div class="responsive-handler fr-view breakable">
                   <div>
-                    <p>I am a certified Digico SD5 Sound Engineer. Here is my <a href="https://pretoriuscdn.ams3.cdn.digitaloceanspaces.com/CDN/Certificates/Digico.jpg" rel="noopener noreferrer" target="_blank">Certificate</a>.</p>
+                    <p>I am a certified Digico SD5 Sound Engineer. Here is my <a href="https://cdn1.pretoriusse.net/CDN/Certificates/Digico.jpg" rel="noopener noreferrer" target="_blank">Certificate</a>.</p>
                   </div>
                 </div>
               </div>
