--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="apple-touch-icon" sizes="167x167" href="https://cdn-cms-s.f-static.net/ready_uploads/pwaScreenLogo/pwaImage.png?width=167&height=167&resizeType=pwaIcon&w=&orderScreen=&websiteID=3996662&tranW=&v=r7121_20974081">
   <!-- Mobile Browser Address Bar Color -->
   <meta name="theme-color" content="#307672"> <!-- Regular Meta Info -->
-  <title class="s123-js-pjax">Raine Pretorius</title>
+  <title class="s123-js-pjax">Raine Pretorius's CV</title>
   <meta name="description" content="Raine Pretorius's CV - I Am Raine" class="s123-js-pjax">
   <meta name="keywords" content="Raine Pretorius CV" class="s123-js-pjax">
   <link rel="canonical" href="https://raine.pretoriusse.net/" class="s123-js-pjax" />
