Added first aid level 1

--- a/education-experience-1/index.html
+++ b/education-experience-1/index.html
@@ -1536,15 +1536,6 @@
                   </div>
                 </div>
                 <div class="cd-timeline-block">
-                  <div class="cd-timeline-img text-primary background-primary-color" style=";color:#ffffff;"><i class="svg-m s123-icon-converter " data-icon-name="check"
-                      style="background-color:#ffffff; mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/check.svg?v=2'); -webkit-mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/check.svg?v=2');"
-                      data-ie11-classes="">&nbsp;</i></div>
-                  <div class="cd-timeline-content box-primary s123-box-bottom-primary-border s123-box-padding">
-                    <h2>Grade 10</h2>
-                    <p>Finished Grade 10.</p><a href="/education-experience-1/grade-10" class="cd-read-more btn btn-primary s123-fast-page-load">Learn More</a><span class="cd-date">Dec&nbsp;06,&nbsp;2019</span>
-                  </div>
-                </div>
-                <div class="cd-timeline-block">
                   <div class="cd-timeline-img text-primary bg-primary" style="background:;color:;"></div>
                   <div class="cd-timeline-content box-primary s123-box-bottom-primary-border s123-box-padding">
                     <h2>Complete Python Bootcamp</h2>
@@ -1588,6 +1579,24 @@
                     <h2>The Complete Java Certification Course</h2>
                     <p>I can write basic Java programs.</p><a href="/education-experience-1/the-complete-java-certification-course" class="cd-read-more btn btn-primary s123-fast-page-load">Learn More</a><span
                       class="cd-date">Sep&nbsp;14,&nbsp;2020</span>
+                  </div>
+                </div>
+                <div class="cd-timeline-block">
+                  <div class="cd-timeline-img text-primary background-primary-color" style=";color:#ffffff;"><i class="svg-m s123-icon-converter " data-icon-name="check"
+                      style="background-color:#ffffff; mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/check.svg?v=2'); -webkit-mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/check.svg?v=2');"
+                      data-ie11-classes="">&nbsp;</i></div>
+                  <div class="cd-timeline-content box-primary s123-box-bottom-primary-border s123-box-padding">
+                    <h2>Grade 10</h2>
+                    <p>Finished Grade 10.</p><a href="/education-experience-1/Grade-10/" class="cd-read-more btn btn-primary s123-fast-page-load">Learn More</a><span class="cd-date">Dec&nbsp;&nbsp;2020</span>
+                  </div>
+                </div>
+                <div class="cd-timeline-block">
+                  <div class="cd-timeline-img text-primary background-primary-color" style=";color:#ffffff;"><i class="svg-m s123-icon-converter " data-icon-name="check"
+                      style="background-color:#ffffff; mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/check.svg?v=2'); -webkit-mask: url('https://static.s123-cdn-static.com/ready_uploads/svg/check.svg?v=2');"
+                      data-ie11-classes="">&nbsp;</i></div>
+                  <div class="cd-timeline-content box-primary s123-box-bottom-primary-border s123-box-padding">
+                    <h2>First Aid Level 1</h2>
+                    <p>First Aid Level 1.</p><a href="/education-experience-1/first-aid-level-1/" class="cd-read-more btn btn-primary s123-fast-page-load">Learn More</a><span class="cd-date">Feb&nbsp;21,&nbsp;2021</span>
                   </div>
                 </div>
               </div>
